// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TESTING ChatItemTargetText RENDER continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 10,
      "paddingRight": 60,
    }
  }
>
  <View
    style={
      Object {
        "borderRadius": 12,
        "height": 24,
        "marginRight": 4,
        "width": 24,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1E3343",
          "borderRadius": 12,
          "borderTopStartRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        Object {
          "paddingLeft": 8,
          "paddingRight": 8,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
        }
      }
      testID="chat-item-message"
    >
      message
    </Text>
  </View>
</View>
`;

exports[`TESTING ChatItemTargetText RENDER not continuous should match snapshot 1`] = `
<View
  style={
    Object {
      "display": "flex",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
      "maxWidth": 300,
      "paddingLeft": 10,
      "paddingRight": 60,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 4,
      }
    }
  >
    https://www.google.com
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#1E3343",
          "borderRadius": 12,
          "borderTopStartRadius": 0,
          "flex": 1,
          "paddingBottom": 4,
          "paddingTop": 4,
        },
        Object {
          "paddingLeft": 8,
          "paddingRight": 8,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "flexDirection": "row",
          },
          Object {},
        ]
      }
      testID="chat-item-user-info"
    >
      <Text
        style={
          Object {
            "color": "#FFFFFF",
            "fontFamily": "Inter-SemiBold",
            "fontSize": 12,
            "lineHeight": 19.36,
          }
        }
      >
        username
      </Text>
      <View
        style={
          Object {
            "alignSelf": "center",
            "backgroundColor": "#69707C",
            "borderRadius": 2,
            "height": 3,
            "marginLeft": 5,
            "marginRight": 5,
            "width": 3,
          }
        }
      />
      <Text
        style={
          Object {
            "alignSelf": "center",
            "color": "#69707C",
            "fontFamily": "Inter-ExtraLight",
            "fontSize": 10,
            "lineHeight": 12.19,
          }
        }
      >
        time
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Inter-Regular",
          "fontSize": 16,
          "lineHeight": 19.36,
        }
      }
      testID="chat-item-message"
    >
      message
    </Text>
  </View>
</View>
`;
